--- a/react-deploy/package.json
+++ b/react-deploy/package.json
@@ -1,25 +1,17 @@
 {
-  "homepage": "https://racheldmarron.github.io/rdmdevportfolio-react",
-  "name": "marons-portfolio",
+  "name": "react-deploy",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@headlessui/react": "^1.6.3",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-icons": "^4.3.1",
-    "react-router-dom": "6",
     "react-scripts": "5.0.1",
-    "react-scroll": "^1.8.7",
-    "react-simple-typewriter": "^3.0.1",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,9 +36,6 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.0.24", 
-    "gh-pages": "^2.1.1"
+    "gh-pages": "^4.0.0"
   }
 }
